--- a/_data/notice.yml
+++ b/_data/notice.yml
@@ -6,6 +6,6 @@
   notice: 이 공지는 보이지 않습니다. (status가 close 입니다)
   status: close
 
-- title: 학생모집
-  notice: 야심찬 학생 찾아오세요.
+- title: 잘보이시나요?
+  notice: 눈이 안좋으시군요!!!
   status: open
