--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Gary FinanceData 
-email: moduedu@gmail.com
+email: gary@gmail.com
 author: GaryKim
 
 # Copyright setting
